add mouseover for the pics and examples for the spoken audio

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <section class="header">
     <nav>
       <a href="index1.html">
-        <h1 class="weijiazhuhovertext">Weijia Zhu</h1>
+        <h1 class="weijiazhuhovertext spoken" data-audioFile="./intro.mp3">Weijia Zhu</h1>
       </a>
       <audio id="weijiazhuaudioPlayer" src="pic/51miz-S212356-F033105B.mp3 "></audio>
       <div class="nav-links">
@@ -48,9 +48,9 @@
     <div class="projectbox">
       <div class="projectlist">
         <ul>
-          <li class="ipv"><a href="projects/Intimate Partner Violence - Narrative Design/ipv.html">Intimate Partner
+          <li class="ipv" data-projectpic="ipvpic"><a href="projects/Intimate Partner Violence - Narrative Design/ipv.html">Intimate Partner
               Violence - Narrative Design</a></li>
-          <li class="Embarrassing"><a
+          <li class="Embarrassing" data-projectpic="embarrassingpic"><a
               href="projects/Embarrassing Symphony - Installation/Embarrassing.html">Embarrassing Symphony -
               Installation</a></li>
           <li class="grow"><a href="projects/grow down-installation/grow.html">grow down-installation</a></li>
@@ -74,8 +74,8 @@
       </div>
       <div class="projectpics">
         <img src="pic/_MG_2149.JPG" id="ipvpic" width="500px" ;>
-        <!-- <img src="pic/_MG_2149.JPG" id="Embarrassingpic" width="500px">
-        <img src="pic/_MG_2149.JPG" id="growpic" width="500px">
+         <img src="pic/_MG_2149.JPG" id="embarrassingpic" width="500px">
+        <!--<img src="pic/_MG_2149.JPG" id="growpic" width="500px">
         <img src="pic/_MG_2149.JPG" id="Conversationspic" width="500px">
         <img src="pic/_MG_2149.JPG" id="Datalogypic" width="500px" >
         <img src="pic/_MG_2149.JPG" id="Lutuanianpic" width="500px" >
