--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+  <div class="custom-cursor site-wide">
+    <div class="pointer"></div>
+  </div>
   <section class="header">
     <nav> 
       <a href="index.html">
