fix audio hovering

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a href="index.html">
         <h1 class="weijiazhuhovertext spoken" data-audioFile="sounds/intro.mp3">Weijia Zhu</h1>
       </a>
-      <!-- <audio id="weijiazhuaudioPlayer" src="pic/51miz-S212356-F033105B.mp3 "></audio> -->
+      <audio id="weijiazhuaudioPlayer" src="pic/51miz-S212356-F033105B.mp3 "></audio>
       <div class="nav-links">
         <ul>
           <li><a href="#projects" class="spoken" data-audioFile="sounds/intro.mp3">Projects</a></li>
